# Same-Limb-MI-EEG-LENet-Classifier

./: .gitignore  MI3_CNN.ipynb  OpenVScodeHere.bat  README.md  REFACTORING_SUMMARY.md  lenet_ccb_mi3.pth  lenet_fcl_mi3.pth  pyproject.toml  setup_env.ps1  setup_env.sh
Datasets/MI3/: README.md  README.txt  dataset_description.json  electrodes_positioning.tsv  participants.tsv  task-motorimagery_channels.tsv  task-motorimagery_eeg.json  task-motorimagery_events.json
Datasets/MI3/code/: Customchannel_dict.ced  MI2_preprocess.m  MI3_process.m  OneSubMI2_preprocess.m  OneSubMI3_preprocess.m
Datasets/MI3/derivatives/: Readme.MD
Docs/: EEG 2 Class ML PROJECT.docx  Project_Structure_Requirements_Guideline.md
ModelWeights/: lenet_ccb_mi3.pth  lenet_fcl_mi3.pth
Notebooks/: MI3_CNN.ipynb
models/: lenet_best.pth  lenet_fcl_best.pth  lenet_fcl_final.pth  lenet_final.pth
reports/metrics/: lenet_fcl_results.json  lenet_results.json
src/mi3_eeg/: __init__.py  config.py  dataset.py  evaluation.py  logger.py  main.py  model.py  train.py  visualization.py
src/mi3_eeg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README_CUDA_TESTS.md  conftest.py  test_config.py  test_cuda.py  test_dataset.py  test_integration.py  test_logger.py  test_model.py  test_training.py
