[project]
name = "ml-final-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib",
    "numpy",
    "pandas",
    "pip>=25.3",
    "scikit-learn",
    "scipy",
    "torch==2.5.1+cu124",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"


